tests/typing/fail/redef-03.rs
use rustre::sync;

sync! {
    #![pass(1)]

    node oui(hello : int, hello : int) = ()
    where
        o : int = o;
}

fn main() {}
