tests/typing/fail/redef-03.stderr
error: variable `hello` is defined twice
 --> tests/typing/fail/redef-03.rs:6:27
  |
6 |     node oui(hello : int, hello : int) = ()
  |                           ^^^^^
  |
help: the variable was previously defined here
 --> tests/typing/fail/redef-03.rs:6:14
  |
6 |     node oui(hello : int, hello : int) = ()
  |              ^^^^^
